feat(vega): add tx/rx stats
